@@ -7,6 +7,7 @@ ver 0.21.11 (not yet released)
   - alsa: fix busy loop while draining
   - alsa: fix missing drain call
   - alsa: improve xrun-avoiding silence generator
+  - alsa: log when generating silence due to slow decoder
   - alsa, osx: fix distortions with DSD_U32 and DoP on 32 bit CPUs
 * protocol
   - fix "list" with multiple "group" levels
